--- a/recept.html
+++ b/recept.html
@@ -12,15 +12,14 @@
 <body>
 
     <div class="ui menu">
-        <a class="item">Browse</a>
-        <a class="item">Submit</a>
+        <a href="kulstran.html" class="item">Previous</a>
+        <a href="https://www.google.com" class="item">Golugolu</a>
         <div class="right menu">
           <a class="item">Sign Up</a>
           <a class="item">Help</a>
         </div>
       </div>
-
-      <div class="ui card" style="width: 70%; margin: auto;">
+      <div class="ui card" style="width: 70%; margin: auto; padding: 10px;">
         <h1>Okusno.je</h1>
         <a class="image" href="#">
           <img src="https://images.24ur.com/media/images/1200x500/Mar2011/60641684.jpg?v=be9b">
@@ -31,7 +30,56 @@
             <a>Krasna jed</a>
           </div>
         </div>
+        <div>
+        <button class="ui circular facebook icon button">
+            <i class="facebook icon"></i>
+          </button>
+          <button class="ui circular twitter icon button">
+            <i class="twitter icon"></i>
+          </button>
+          <button class="ui circular linkedin icon button">
+            <i class="linkedin icon"></i>
+          </button>
+          <button class="ui circular google plus icon button">
+            <i class="google plus icon"></i>
+          </button>
+        </div>
+
+        <div style="margin: 20px;">
+            <h1>Sestavine:</h1>
+            <div class="ui ordered list">
+                <a class="item">Getting Started</a>
+                <a class="item">Introduction</a>
+                <div class="item">
+                  <a>Languages</a>
+                  <div class="list">
+                    <a class="item">HTML</a>
+                    <a class="item">Javascript</a>
+                    <a class="item">CSS</a>
+                  </div>
+                </div>
+                <a class="item">Review</a>
+              </div>
+        </div>
+
+        <div>
+
+        </div>
+        
+        <div style="margin: 20px;">
+            <h1>Postopek</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+
+        <div style="margin: 20px;">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/WCa0OUOvRMA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
       </div>
+
+      
 
 </body>
 </html>
