--- a/recept.html
+++ b/recept.html
@@ -79,7 +79,111 @@
 
       </div>
 
+      <div style="margin: 10px;">
+        <h1>Kontaktirajte nas</h1>
+        <hr>
+        <form class="ui form">
+            <div class="field">
+              <label>First Name</label>
+              <input type="text" name="first-name" placeholder="First Name">
+            </div>
+            <div class="field">
+              <label>Last Name</label>
+              <input type="email" name="last-name" placeholder="Last Name">
+            </div>
+            <div class="field">
+              <div class="ui checkbox">
+                <input type="checkbox" tabindex="0" class="hidden">
+                <label>I agree to the Terms and Conditions</label>
+              </div>
+            </div>
+            <button class="ui button" type="submit">Submit</button>
+          </form>
+      </div>
       
+      <div style="margin: 10px;">
+        <div class="ui comments">
+            <h3 class="ui dividing header">Comments</h3>
+            <div class="comment">
+              <a class="avatar">
+                <img src="https://banner2.cleanpng.com/20180521/jzj/kisspng-pepe-the-frog-screenshot-laptop-5b0253aa7d5255.9808098715268791465133.jpg">
+              </a>
+              <div class="content">
+                <a class="author">Matt</a>
+                <div class="metadata">
+                  <span class="date">Today at 5:42PM</span>
+                </div>
+                <div class="text">
+                  How artistic!
+                </div>
+                <div class="actions">
+                  <a class="reply">Reply</a>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <a class="avatar">
+                <img src="https://banner2.cleanpng.com/20180521/jzj/kisspng-pepe-the-frog-screenshot-laptop-5b0253aa7d5255.9808098715268791465133.jpg">
+              </a>
+              <div class="content">
+                <a class="author">Elliot Fu</a>
+                <div class="metadata">
+                  <span class="date">Yesterday at 12:30AM</span>
+                </div>
+                <div class="text">
+                  <p>This has been very useful for my research. Thanks as well!</p>
+                </div>
+                <div class="actions">
+                  <a class="reply">Reply</a>
+                </div>
+              </div>
+              <div class="comments">
+                <div class="comment">
+                  <a class="avatar">
+                    <img src="https://banner2.cleanpng.com/20180521/jzj/kisspng-pepe-the-frog-screenshot-laptop-5b0253aa7d5255.9808098715268791465133.jpg">
+                  </a>
+                  <div class="content">
+                    <a class="author">Jenny Hess</a>
+                    <div class="metadata">
+                      <span class="date">Just now</span>
+                    </div>
+                    <div class="text">
+                      Elliot you are always so right :)
+                    </div>
+                    <div class="actions">
+                      <a class="reply">Reply</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <a class="avatar">
+                <img src="https://banner2.cleanpng.com/20180521/jzj/kisspng-pepe-the-frog-screenshot-laptop-5b0253aa7d5255.9808098715268791465133.jpg">
+              </a>
+              <div class="content">
+                <a class="author">Joe Henderson</a>
+                <div class="metadata">
+                  <span class="date">5 days ago</span>
+                </div>
+                <div class="text">
+                  Dude, this is awesome. Thanks so much
+                </div>
+                <div class="actions">
+                  <a class="reply">Reply</a>
+                </div>
+              </div>
+            </div>
+            <form class="ui reply form">
+              <div class="field">
+                <textarea></textarea>
+              </div>
+              <div class="ui blue labeled submit icon button">
+                <i class="icon edit"></i> Add Reply
+              </div>
+            </form>
+          </div>
+      </div>
 
 </body>
 </html>
