--- a/recept.html
+++ b/recept.html
@@ -27,7 +27,7 @@
         <div class="content">
           <a class="header" href="#">Sarma</a>
           <div class="meta">
-            <a>Krasna jed</a>
+            <a>Krasna jed, ampak sushi je bols.</a>
           </div>
         </div>
         <div>
