--- a/test.html
+++ b/test.html
@@ -18,12 +18,24 @@
             <form class="ui form">
                 <div class="field">
                     <label>Ime uporabnika</label>
-                    <input id="ime" type="text" placeholder="First Name">
+                    <input v-on:keyup="enterPressed()" v-model="newname" id="ime" type="text" placeholder="First Name">
                 </div>
                 <button v-on:click="addToSeznam()" class="ui button primary" type="button">Dodaj</button>
             </form>
             <hr />
-            <p v-for="ime in seznam">{{ ime }}</p>
+            <div v-for="(item, index) in seznam" style="width: 30%; margin: 10px; float:left">
+                <div class="ui card">
+                    <a class="image" href="#">
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.svg/1024px-User_icon_2.svg.png">
+                    </a>
+                    <div class="content">
+                      <a class="header" href="#">{{ item["title"] }}</a>
+                      <div class="meta">
+                        <button v-on:click="removeFromSeznam(index)" class="ui secondary button">Delete</buton>
+                      </div>
+                    </div>
+                  </div>
+            </div>
         </div>
     </div>
     <script>
@@ -31,14 +43,30 @@
             new Vue({
                 el: "#root",
                 data: () => ({
-                    seznam: ["Anže", "Žak", "Jan"]
+                    newname: "",
+                    seznam: []
                 }),
+                created: function() {
+                    fetch("https://jsonplaceholder.typicode.com/posts")
+                        .then(res => res.json())
+                        .then(result => this.seznam = result)
+                },
                 methods: {
                     clicked() {
                         alert(this.ime);
                     },
                     addToSeznam() {
-                        
+                        this.seznam.push(this.newname);
+                        this.newname = "";
+                    },
+                    removeFromSeznam(index) {
+                        this.seznam.splice(index, 1);
+                        alert("Deleting item at...." + index);
+                    },
+                    enterPressed() {
+                        if(window.event.key == 'ž') {
+                            this.addToSeznam();
+                        }
                     }
                 }
             });
