--- a/test.html
+++ b/test.html
@@ -29,7 +29,8 @@
                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.svg/1024px-User_icon_2.svg.png">
                     </a>
                     <div class="content">
-                      <a class="header" href="#">{{ item["title"] }}</a>
+                      <a class="header" href="#">{{ item["name"] }}</a>
+                      <a class="header" href="#">{{ item["email"] }}</a>
                       <div class="meta">
                         <button v-on:click="removeFromSeznam(index)" class="ui secondary button">Delete</buton>
                       </div>
@@ -38,40 +39,6 @@
             </div>
         </div>
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            new Vue({
-                el: "#root",
-                data: () => ({
-                    newname: "",
-                    seznam: []
-                }),
-                created: function() {
-                    fetch("https://jsonplaceholder.typicode.com/posts")
-                        .then(res => res.json())
-                        .then(result => this.seznam = result)
-                },
-                methods: {
-                    clicked() {
-                        alert(this.ime);
-                    },
-                    addToSeznam() {
-                        this.seznam.push(this.newname);
-                        this.newname = "";
-                    },
-                    removeFromSeznam(index) {
-                        this.seznam.splice(index, 1);
-                        alert("Deleting item at...." + index);
-                    },
-                    enterPressed() {
-                        if(window.event.key == 'ž') {
-                            this.addToSeznam();
-                        }
-                    }
-                }
-            });
-        });
-    </script>
 </body>
 
 </html>
